--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
   "editor.formatOnSaveMode": "modifications",
   "files.autoSave": "afterDelay",
   "[python]": {
-    "editor.defaultFormatter": "ms-python.python"
+    "editor.defaultFormatter": "ms-python.autopep8"
   },
   "python.formatting.provider": "none",
   "python.analysis.typeCheckingMode": "basic"
